--- a/recharge-record.html
+++ b/recharge-record.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta name="flexible" content="initial-dpr=2" />
-    <title>历史记录</title>
+    <title>充值记录</title>
     <link rel="stylesheet" href="css/weui.min.css" />
     <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -25,58 +25,59 @@
         <a href="index.html"></a>
       </div>
     </div>
-    <div class="page__pd">
+    <!-- 充值记录 -->
+    <div class="weui-panel weui-panel_access">
 
-      <div class="weui-panel weui-panel_access">
-        <div class="weui-panel__bd" id="list">
-
-          <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
-            <div class="weui-media-box__hd">
-              <img class="weui-media-box__thumb" src="images/history.png" alt="" />
-            </div>
+      <div class="weui-cell weui-check__label">
+        <div class="weui-cell__bd">
+          <div class="weui-media-box_appmsg">
+            <div class="weui-cell__hd"><img src="images/history.png"></div>
             <div class="weui-media-box__bd">
               <h4 class="weui-media-box__title wrap-history">
-                钱包充值 <span class="weui-media-box__title-after">-200元</span>
+                钱包充值 <i class="weui-media-box__title-after">元</i><strong class="weui-media-box__title-after">200</strong>
               </h4>
               <div class="weui-media-box__title wrap-history-bottom">
                 2019-01-12<span class="weui-media-box__title-after">小招</span>
               </div>
             </div>
-          </a>
-          <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
-            <div class="weui-media-box__hd">
-              <img class="weui-media-box__thumb" src="images/history.png" alt="" />
-            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="weui-cell weui-check__label">
+        <div class="weui-cell__bd">
+          <div class="weui-media-box_appmsg">
+            <div class="weui-cell__hd"><img src="images/history.png"></div>
             <div class="weui-media-box__bd">
               <h4 class="weui-media-box__title wrap-history">
-                钱包充值 <span class="weui-media-box__title-after">-200元</span>
+                钱包充值 <i class="weui-media-box__title-after">元</i><strong class="weui-media-box__title-after">200</strong>
               </h4>
               <div class="weui-media-box__title wrap-history-bottom">
                 2019-01-12<span class="weui-media-box__title-after">小招</span>
               </div>
             </div>
-          </a>
-          <a href="javascript:;" class="weui-media-box weui-media-box_appmsg" >
-            <div class="weui-media-box__hd">
-              <img class="weui-media-box__thumb" src="images/history.png" alt="" />
-            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="weui-cell weui-check__label">
+        <div class="weui-cell__bd">
+          <div class="weui-media-box_appmsg">
+            <div class="weui-cell__hd"><img src="images/history.png"></div>
             <div class="weui-media-box__bd">
               <h4 class="weui-media-box__title wrap-history">
-                钱包充值 <span class="weui-media-box__title-after">-200元</span>
+                钱包充值 <i class="weui-media-box__title-after">元</i><strong class="weui-media-box__title-after">200</strong>
               </h4>
               <div class="weui-media-box__title wrap-history-bottom">
                 2019-01-12<span class="weui-media-box__title-after">建行</span>
               </div>
             </div>
-          </a>
-          
-
+          </div>
         </div>
       </div>
-    </div>
-    <div class="weui-loadmore">
-      <i class="weui-loading"></i>
-      <span class="weui-loadmore__tips">正在加载</span>
+      <a href="javascript:void(0);" class="weui-cell weui-cell_link">
+        <div class="weui-cell__bd">显示更多</div>
+      </a>
     </div>
     <script src="js/jquery-2.1.4.js"></script>
     <script src="js/jquery-weui.min.js"></script>
