--- a/change-password.html
+++ b/change-password.html
@@ -29,42 +29,49 @@
       <div class="weui-cells">
         <div class="weui-cell">
           <div class="weui-cell__bd">
-            <input class="weui-input" type="password" placeholder="输入旧密码"  style="ime-mode:disabled" />
+            <input class="weui-input" id="old_password" type="password" placeholder="输入旧密码"  style="ime-mode:disabled" />
           </div>
         </div>
       </div>
       <div class="weui-cells">
         <div class="weui-cell">
           <div class="weui-cell__bd">
-            <input class="weui-input" id="password" type="password" placeholder="输入新密码" />
+            <input class="weui-input" id="new_password" type="password" placeholder="输入新密码" />
           </div>
         </div>
       </div>
       <div class="weui-cells">
         <div class="weui-cell">
           <div class="weui-cell__bd">
-            <input class="weui-input" id="oldPassword" type="password" placeholder="重复新密码" />
+            <input class="weui-input" id="repead_new_Password" type="password" placeholder="重复新密码" />
           </div> 
         </div>
       </div>
     </div>
     <div class="weui-cells__title">密码必须是6-12位，区分大小写</div>
     <div class="weui-btn-area">
-      <a class="weui-btn weui-btn_primary" href="javascript:" id="showTooltips"
-        >提交</a
-      >
+      <a class="weui-btn weui-btn_primary" href="successful-password.html" id="showTooltips">提交</a>
     </div>
     <script src="js/jquery-2.1.4.js"></script>
     <script src="js/jquery-weui.min.js"></script>
     <script>
       $("#showTooltips").click(function() {
-        var tel = $("#newPassword").val();
-        var code = $("#oldPassword").val();
+        var old = $("#old_password").val();
+        var new_p = $("#new_password").val();
+        var code = $("#repead_new_Password").val();
 
-        if ( tel == code ) $.toptip("重复密码不对");
-
-        // if (!tel || !/1[3|4|5|7|8]\d{9}/.test(tel)) $.toptip("重复密码不对");
-        else $.toptip("提交成功", "success");
+        if(old.length < 6 || old.length > 12) {
+          alert("旧密码错误！");
+          event.preventDefault();  // 阻止页面跳转
+        } else if(new_p.length < 6 || code.length < 6 || new_p.length > 12 || code.length >12) {
+          alert("新密码长度只能为6-12位！");
+          event.preventDefault();  // 阻止页面跳转
+        } else if (new_p !== code) {
+          alert("修改的密码不一致！");
+          event.preventDefault();  // 阻止页面跳转
+        } else {
+          $.toast("密码修改成功！")
+        }
       });
     </script>
   </body>
