--- a/history-record.html
+++ b/history-record.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta name="flexible" content="initial-dpr=2" />
-    <title>记录详情</title>
+    <title>订单详情</title>
     <link rel="stylesheet" href="css/weui.min.css" />
     <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -15,58 +15,43 @@
   </head>
 
   <body>
-      <!-- 顶部菜单 -->
-      <div class="weui-flex invoice-head">
-        <div class="weui-flex__item return">
-          <a href="javascript:;" onClick="javascript :history.back(-1);" class="invoice-return">返回</a>
-        </div>
-        <!-- <div class="weui-flex__item"><div class="placeholder">发票抬头</div></div> -->
-        <div class="homepage">
-          <a href="index.html"></a>
+    <!-- 顶部菜单 -->
+    <div class="weui-flex invoice-head">
+      <div class="weui-flex__item return">
+        <a href="javascript:;" onClick="javascript :history.back(-1);" class="invoice-return">返回</a>
+      </div>
+      <!-- <div class="weui-flex__item"><div class="placeholder">发票抬头</div></div> -->
+      <div class="homepage">
+        <a href="index.html"></a>
+      </div>
+    </div>
+    <!-- 订单详情 -->
+    <div class="weui-cells">
+      <div class="weui-cell">
+        <div class="weui-cell__bd">
+          <p>订单详情</p>
         </div>
       </div>
-    <div class="weui-form-preview">
-      <div class="weui-form-preview__hd">
-        <div class="weui-form-preview__item history-record">
-          <label class="weui-form-preview__label">支付费用</label>
-          <em class="weui-form-preview__value">20.00元</em>
-        </div>
-      </div>
-
-      <div class="weui-form-preview__bd history-record-details">
-        <div class="weui-form-preview__item">
-          <label class="weui-form-preview__label">支付昵称：</label>
-          <span class="weui-form-preview__value">招商银行</span>
-        </div>
-      </div>
-      <div class="weui-form-preview__bd history-record-details">
-        <div class="weui-form-preview__item">
-          <label class="weui-form-preview__label">优惠方式：</label>
-          <span class="weui-form-preview__value">金额优惠</span>
-        </div>
-      </div>
-      <div class="weui-form-preview__bd history-record-details">
-        <div class="weui-form-preview__item">
-          <label class="weui-form-preview__label">车牌号码：</label>
-          <span class="weui-form-preview__value">粤B123456</span>
-        </div>
-      </div>
-      <div class="weui-form-preview__bd history-record-details">
-        <div class="weui-form-preview__item">
-          <label class="weui-form-preview__label">车场名称：</label>
-          <span class="weui-form-preview__value">鲤鱼门西街公共停车场</span>
-        </div>
-      </div>
-      <div class="weui-form-preview__bd history-record-details">
-        <div class="weui-form-preview__item">
-          <label class="weui-form-preview__label">入场时间：</label>
-          <span class="weui-form-preview__value">2019-01-03 10:49:44</span>
-        </div>
-      </div>
-      <div class="weui-form-preview__bd history-record-details">
-        <div class="weui-form-preview__item">
-          <label class="weui-form-preview__label">出场时间：</label>
-          <span class="weui-form-preview__value">2019-01-03 18:21:14</span>
+      <div class="weui-cell">
+        <div class="weui-cell__bd">
+          <p class="weui-media-box__title history-record">
+            <strong>支付费用：</strong><i>20</i><i>元</i>
+          </p>
+          <p class="weui-media-box__title history-record">
+            <strong>支付昵称：</strong><i>招商银行</i>
+          </p>
+          <p class="weui-media-box__title history-record">
+            <strong>优惠方式：</strong><i>金额优惠</i>
+          </p>
+          <p class="weui-media-box__title history-record">
+            <strong>车牌号码：</strong><i>粤B123456</i>
+          </p>
+          <p class="weui-media-box__title history-record">
+            <strong>入场时间：</strong><i>2019-01-03 10:49:44</i>
+          </p>
+          <p class="weui-media-box__title history-record">
+            <strong>出场时间：</strong><i>2019-01-03 18:21:14</i>
+          </p>
         </div>
       </div>
     </div>
