--- a/view-invoice.html
+++ b/view-invoice.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+      content="width=device-width, initial-scale=1"
     />
     <meta name="flexible" content="initial-dpr=2" />
     <title>查看发票</title>
     <link rel="stylesheet" href="css/weui.min.css" />
-    <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <div class="weui-gallery" onClick="javascript :history.back(-1);" style="display: block">
-      <span class="weui-gallery__img" style="background-image: url(./images/pic_article.png);"></span>
+    <div class="weui-gallery" style="display: block" onClick="javascript :history.back(-1);">
+      <span class="weui-gallery__img" style="background-image: url(./images/232.png);"></span>
+      <div class="weui-gallery__opr">
+        <a href="javascript:" class="weui-gallery__del">
+            <i class="weui-icon-cancel"></i>
+        </a>
+      </div>
     </div>
-    <script src="js/jquery-2.1.4.js"></script>
-    <script src="js/jquery-weui.min.js"></script>
-    <script>
-    </script>
   </body>
 </html>
