发票图片显示

--- a/view-invoice.html
+++ b/view-invoice.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <div class="weui-gallery" style="display: block" onClick="javascript :history.back(-1);">
-      <span class="weui-gallery__img" style="background-image: url(./images/232.png);"></span>
+    <div class="weui-gallery" style="display: block;" onClick="javascript :history.back(-1);">
+      <img src="images/232.pdf" alt="电子发票" style="width: 100%;position: absolute; top: 25%;">
       <div class="weui-gallery__opr">
         <a href="javascript:" class="weui-gallery__del">
-            <i class="weui-icon-cancel"></i>
+          <i class="weui-icon-cancel"></i>
         </a>
       </div>
     </div>
