登录页面添加footer

--- a/login.html
+++ b/login.html
@@ -36,8 +36,7 @@
     <div class="occlusion"></div>
     <div class="login">
       <div class='demos-content-padded'></div>
-      <div class='demos-content-padded'></div>
-      <div class="weui-cells weui-cells_form">
+      <div class="weui-cells weui-cells_form ">
         <div class="weui-cell">
           <!-- <div class="weui-cell__hd"><label class="weui-label">账号：</label></div> -->
           <div class="weui-cell__bd">
@@ -55,7 +54,12 @@
       <div class='demos-content-padded'>
         <a href="javascript:;" class="weui-btn weui-btn_primary">提交</a>
       </div>
-      <div class='demos-content-padded'></div>
+      <div class="weui-footer demos-content-paddeds">
+        <p class="weui-footer__links">
+          <a href="javascript:void(0);" class="weui-footer__link">深圳市前海智慧交通运营科技有限公司</a>
+        </p>
+        <p class="weui-footer__text">Copyright © 2008-2019</p>
+      </div>
     </div>
     <script src="js/jquery-2.1.4.js"></script>
     <script src="js/jquery-weui.min.js"></script>
