--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -23,6 +23,9 @@
       .weui-cells {
         background-color: #f2f2f2;
       }
+      .wrong-password {
+        color: #f00;
+      }
       .weui-cell__bd {
         border: 1px solid #dcdcdc;
         border-radius: 0.4em;
@@ -36,22 +39,21 @@
     <div class="occlusion"></div>
     <div class="login">
       <div class='demos-content-padded'></div>
-      <div class="weui-cells weui-cells_form ">
+      <div class="weui-cells weui-cells_form">
+        <p class="weui-cell wrong-password">密码错误！</p>
         <div class="weui-cell">
-          <!-- <div class="weui-cell__hd"><label class="weui-label">账号：</label></div> -->
           <div class="weui-cell__bd">
             <input class="weui-input user" type="text" autocomplete="off" placeholder="请输入账号">
           </div>
         </div>
         <div class="weui-cell">
-          <!-- <div class="weui-cell__hd"><label class="weui-label">密码：</label></div> -->
           <div class="weui-cell__bd">
             <input class="weui-input password" type="password" autocomplete="off" placeholder="请输入密码">
           </div>
         </div>
       </div>
       <!-- 提交 -->
-      <div class='demos-content-padded'>
+      <div class='demos-content-padded weui-cells'>
         <a href="javascript:;" class="weui-btn weui-btn_primary">提交</a>
       </div>
       <div class="weui-footer demos-content-paddeds">
