--- a/mine.html
+++ b/mine.html
@@ -8,8 +8,6 @@
     />
     <meta name="flexible" content="initial-dpr=2" />
     <title>我的</title>
-    <!-- 手淘网适配移动端js -->
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
     <link rel="stylesheet" href="css/weui.min.css" />
     <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -26,8 +24,7 @@
           <div class="header">
             <!-- 设置 -->
             <!-- <div class="setting"></div> -->
-            <a href="personal.html" class="personal-information show-loading">
-              <div class="personal">
+              <div class="personal-information personal">
                 <img src="images/avatar.jpg" alt="">
                 <div class="personal-message">
                   <p>招商银行</p>
@@ -35,8 +32,6 @@
                   <span>17764810319</span>
                 </div>
               </div>
-              <strong></strong>
-            </a>
           </div>
           <!-- 我的账户 -->
           <div class="weui-cells" style="margin-top: 0.6em;">
