--- a/login.html
+++ b/login.html
@@ -23,7 +23,15 @@
       .weui-cells {
         background-color: #f2f2f2;
       }
-      .wrong-password {
+      /* 修改默认表单默认样式 */
+      .weui-cells:after, .weui-cells:before {
+        border: none;
+      }
+      .weui-cell:before {
+        border: none;
+      }
+      .weui-cells__title {
+        margin-top: 0;
         color: #f00;
       }
       .weui-cell__bd {
@@ -40,7 +48,6 @@
     <div class="login">
       <div class='demos-content-padded'></div>
       <div class="weui-cells weui-cells_form">
-        <p class="weui-cell wrong-password">密码错误！</p>
         <div class="weui-cell">
           <div class="weui-cell__bd">
             <input class="weui-input user" type="text" autocomplete="off" placeholder="请输入账号">
@@ -51,9 +58,10 @@
             <input class="weui-input password" type="password" autocomplete="off" placeholder="请输入密码">
           </div>
         </div>
+        <div class="weui-cells__title">用户名或密码错误！</div>
       </div>
       <!-- 提交 -->
-      <div class='demos-content-padded weui-cells'>
+      <div class='demos-content-paddeds'>
         <a href="javascript:;" class="weui-btn weui-btn_primary">提交</a>
       </div>
       <div class="weui-footer demos-content-paddeds">
